--- a/June2024.md
+++ b/June2024.md
@@ -1,4 +1,4 @@
-# Weekly AI-News
+# Weekly AI-News - June 2024
 Welcome to the Weekly-AI-news!
 I mainly focuses more on Generative AI, LLMs and the related, so may miss import AI news in other areas. <br><br>
 ***30 Jun 2024***
