--- a/May2024.md
+++ b/May2024.md
@@ -223,7 +223,7 @@ Researchers are striving to reverse-engineer artificial intelligence and scan th
 13. ***AI Chatbots are increasingly involved in scientific publishing, with some papers showing signs of AI involvement. While detection methods are limited, concerns arise regarding the potential impact of AI-generated content on scientific integrity.*** <br><br>
     1 May, Scientific American published a [paper](https://www.scientificamerican.com/article/chatbots-have-thoroughly-infiltrated-scientific-publishing/) “AI Chatbots Have Thoroughly Infiltrated Scientific Publishing”. The paper finds that one percent of scientific articles published in 2023 showed signs of generative AI’s potential involvement, according to a recent analysis. Some of these tells—such as the inadvertent inclusion of “certainly, here is a possible introduction for your topic” in a recent paper in Surfaces and Interfaces, a journal published by Elsevier—are reasonably obvious evidence that a scientist used an AI chatbot known as a large language model (LLM). But “that’s probably only the tip of the iceberg,” says scientific integrity consultant Elisabeth Bik. In most other cases AI involvement isn’t as clear-cut, and automated AI text detectors are unreliable tools for analyzing a paper. Researchers from several fields have, however, identified a few key words and phrases (such as “complex and multifaceted”) that tend to appear more often in AI-generated sentences than in typical human writing. “When you’ve looked at this stuff long enough, you get a feel for the style,” says Andrew Gray, a librarian and researcher at University College London. The paper also finds that AI certainly has been used to produce scientific diagrams and illustrations that have often been included in academic papers—including, notably, one bizarrely endowed rodent—and even to replace human participants in experiments. The paper ends by saying that if AI-generated judgments creep into academic papers alongside AI text, that concerns experts, including Matt Hodgkinson, a council member of the Committee on Publication Ethics, a U.K.-based nonprofit organization that promotes ethical academic research practices. Chatbots are “not good at doing analysis,” he says, “and that’s where the real danger lies.”
 
-15. ***n-Context Learning explores the behavior of learning with long-context models, showing performance gains with larger datasets. It identifies properties of in-context learning and long-context models, providing insights into their effectiveness.*** <br><br>
+15. ***In-Context Learning explores the behavior of learning with long-context models, showing performance gains with larger datasets. It identifies properties of in-context learning and long-context models, providing insights into their effectiveness.*** <br><br>
     30 Apr, CMU and Tel Aviv Uni published a [paper](https://arxiv.org/pdf/2405.00200) “In-Context Learning with Long-Context Models: An In-Depth Exploration”. The paper finds that as model context lengths continue to increase, the number of demonstrations that can be provided in-context approaches the size of entire training datasets. The paper studies the behavior of in-context learning (ICL) at this extreme scale on multiple datasets and models. The authors show that, for many datasets with large label spaces, performance continues to increase with hundreds or thousands of demonstrations. The paper contrasts this with example retrieval and finetuning: example retrieval shows excellent performance at low context lengths but has diminished gains with more demonstrations; finetuning is more data hungry than ICL but can sometimes exceed long-context ICL performance with additional data. The researchers use this ICL setting as a testbed to study several properties of both in-context learning and long-context models. The study shows that long-context ICL is less sensitive to random input shuffling than short-context ICL, that grouping of same-label examples can negatively impact performance, and that the performance boosts the authors see do not arise from cumulative gain from encoding many examples together. The research concludes that although long-context ICL can be surprisingly effective, most of this gain comes from attending back to similar examples rather than task learning.
 
 17. ***Multi-token prediction improves large language model training efficiency and downstream capabilities without additional training time overhead. It enhances performance on coding tasks and algorithmic reasoning, offering faster inference times.*** <br><br>
